Tue Jan  8 11:33:28 2002  Owen Taylor  <otaylor@redhat.com>

	* docs/Makefile.am (EXTRA_DIST): Add text files to EXTRA_DIST.
	(#68239, Matthias Clasen)

2002-01-07  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in (ALL_LINGUAS): Added pl.

2002-01-05  Hans Breuer  <hans@breuer.org>

	* glibconfig.h.win32.in 
	  msvc_recommended_pragmas.h (new file) : moved warning to
	error pragmas to their own file to not force 'good practice'
	programming in downstream libs and apps. Instead the new header
	will be used by -FImsvc_recommended_pragmas.h in gnome/cvs
	makefile.msc
	* */makefile.msc.in : use -FImsvc_recommended_pragmas.h

	* makefile.am : add msvc_recommended_pragmas.h to EXTRA_DIST

2001-12-31  Tor Lillqvist  <tml@iki.fi>

	* glib/gutils.c (g_get_any_init): (Win32) Use longer buffer for
	user name.

Sat Dec 29 15:07:21 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gspawn.c (script_execute): Copy trailing NULL
	into new ARGV array. (#67673)

2001-12-28  Sven Neumann  <sven@gimp.org>

	* glib/gmessages.c: only include printf_string_upper_bound() if
	HAVE_C99_VSNPRINTF is not defined.

2001-12-27  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added portuguese to ALL_LINGUAS

Sat Dec 22 12:08:56 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: 1.3.12, binary, interface age 0.

	* NEWS: Updated.

2001-12-21  Tor Lillqvist  <tml@iki.fi>

	* config.h.win32.in: Add (undefined) HAVE_C99_VSNPRINTF.

	* glibconfig.h.win32.in: Add definition of G_HAVE_GROWING_STACK.

	* tests/Makefile.am: Rename the progs_LDADD, thread_LDADD and
	module_LDADD Make macros to progs_ldadd, thread_ldadd and
	module_ldadd. Newer automakes reserve macros named *_LDADD for
	the use as LDADDs for targets it knows.

	* glib/giowin32.c: (struct _GIOWin32Watch): 'callback' wasn't used
	here, either.

2001-12-21  Matthias Clasen  <matthiasc@poet.de>

	* glib/gfileutils.c (g_file_get_contents): Remove FIXME. (#67063)

2001-12-19  Mark McLoughlin  <mark@skynet.ie>
