@@ -1,3 +1,11 @@
+2002-01-16  Sven Neumann  <sven@gimp.org>
+
+	* acinclude.m4
+	* m4macros/glib-gettext.m4: removed the --disable-nls option. You
+	can't disable Native Language Support since we rely on it.
+
+	* configure.in: nicer --help output.
+
 Tue Jan  8 11:33:28 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* docs/Makefile.am (EXTRA_DIST): Add text files to EXTRA_DIST.
